updated cloudfront config to work with auth. Had to update the behaviour of the api/auth routes.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "build:app": "cd app && npm run build && cd ..",
+    "deploy": "npm run build:app && cdk deploy"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
