--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.13",
+    "@aws-amplify/ui-react": "^6.1.2",
+    "aws-amplify": "^6.0.13",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
